# resyn

./: .gitignore  .hgignore  LICENSE  README.md  resyn.cabal  shell.nix  stack.yaml  synquid.cabal  todo.txt
logs/: InsertionFail.txt  InsertionFail2.txt  IntPairsBad.txt  LinearConstant.txt  PolyListBad.txt  SimpleFail.txt  SimpleFailBase.txt  proof.txt  resyn.sl
src/: Synquid.hs
src/Synquid/: .#Pretty.hs  Codegen.hs  Error.hs  Explorer.hs  Explorer.hs.orig  HornSolver.hs  Logic.hs  NumericSolver.hs  Parser.hs  Pretty.hs  Program.hs  Resolver.hs  Resources.hs  SolverMonad.hs  Stats.hs  Synthesizer.hs  Tokens.hs  Type.hs  TypeChecker.hs  TypeChecker.hs.orig  TypeConstraintSolver.hs  TypeConstraintSolver.hs.orig  Util.hs  Z3.hs
src/Synquid/Solver/: CBC.hs  CEGIS.hs  CVC4.hs  GLPK.hs  HornClause.hs  LP.hs  Monad.hs  Resource.hs  Sygus.hs  TypeConstraint.hs  Types.hs  Util.hs
src/Synquid/Synthesis/: Explorer.hs  Synthesizer.hs  TypeChecker.hs  Util.hs
test/: Common.hs  Test.hs  merge.sq  run_tests.py
test/Test/: Linear.hs  Logic.hs
test/ap/constant/: Constant-List-Append.sq  Int-List-Append.sq  Int-List-Insert-Bad.sq  Int-List-Insert.sq  Int-Pairs-Bad.sq  Int-Pairs-Syn-Bad.sq  Int-Pairs-Syn.sq  Int-Pairs.sq  List-Append.sq  List-Compress-Bad.sq  List-Compress.sq  List-Insert.sq  List-Merge.sq  List-Replicate-Bad.sq  Log-List-Append.txt  Log-Poly-List-Append.txt  Pairs.sq  Poly-List-Append-Bad.sq  Poly-List-Append.sq  Poly-List-Append2.sq  Poly-List-Compress-Bad.sq  Poly-List-Compress.sq  SimpleAP.sq  SimpleAPFail.sq  SimpleConstant.sq  SimpleConstantFail.sq  SimpleRecursionFail.sq  SimpleRecursionFailBase.sq  SimpleRes.sq  SimpleResFail.sq  Trivial-List-Append.sq
test/ap/dependent/: Data-Structures.sq  List-Insert.sq  List-Insertion-Sort-Bad.sq  List-Insertion-Sort-Lambda.sq  List-Insertion-Sort-Reference-Bad.sq  List-Insertion-Sort-Reference.sq  List-Insertion-Sort-Simple-Bad.sq  List-Insertion-Sort-Simple.sq  List-Insertion-Sort.sq  Tree-Insert.sq
test/checking/: oracle
test/current/: List-All.sq  oracle
test/cvc4/: example.sy  partition.sy  simple.sy
test/icfp20/: .results.tex  BST-Insert.sq  BST-Member.sq  List-InsertSort.sq  List-Merge-Build.sq  List-Merge-Flatten.sq  List-Merge-Sort-Quadratic.sq  List-Merge-Sort.sq  List-Nub.sq  List-PSInsertSort.sq  List-Pairs.sq  List-Quick-Build.sq  List-Quick-Sort-Quadratic.sq  List-Quick-Sort.sq  List-Reverse.sq  List-SelectionSort.sq  List-Subset-Sum.sq  results.csv  run_all.py
test/pldi19/: AVL-Balance.sq  AVL-Delete.sq  AVL-ExtractMin.sq  AVL-Insert.sq  AVL-RotateL.sq  AVL-RotateR.sq  AddressBook-Make.sq  AddressBook-Merge.sq  BST-Delete.sq  BST-Insert.sq  BST-Member.sq  BST-Sort.sq  BinHeap-Doubleton.sq  BinHeap-Insert.sq  BinHeap-Member.sq  BinHeap-Singleton.sq  BinHeap-Tripleton.sq  Evaluator.sq  IncList-Insert.sq  IncList-Merge.sq  List-Append.sq  List-Append3.sq  List-CompareCT.sq  List-Compress.sq  List-DFS.sq  List-Delete.sq  List-Diff.sq  List-Drop.sq  List-Elem.sq  List-ElemIndex.sq  List-ExtractMin.sq  List-Foldr.sq  List-Insert-Fine-Alt.sq  List-Insert-Fine.sq  List-Insert.sq  List-InsertCT.sq  List-Intersect.sq  List-Ith.sq  List-LenCompare.sq  List-LenCompareCT.sq  (+33 more)
test/popl19/: BinHeap-Common.sq  IncList-Insert.sq  IncList-Pivot.sq  List-Append.sq  List-Compress.sq  List-Intersect.sq  List-Replicate.sq  List-Snoc.sq  Queue-Enqueue.sq  TripleList-Intersect.sq  UniqueList-Insert.sq  results  results.tex  run_all.py
test/resources/: BST-Contains-Bad.sq  BST-Contains.sq  BST-Delete-Bad.sq  BST-Delete.sq  BST-Insert-Bad.sq  BST-Insert.sq  BST-Replicate-Bad.sq  BST-Replicate.sq  FilterAbove.sq  Insert.sq  List-Append-Bad.sq  List-Append.sq  List-Append2.sq  List-Compress-Bad.sq  List-Compress.sq  List-Cons2-Bad.sq  List-Cons2.sq  List-Delete-Bad.sq  List-Delete.sq  List-Double-Bad.sq  List-Double.sq  List-Fold.sq  List-Insert-Bad.sq  List-Replicate-Bad.sq  List-Replicate.sq  List-Reverse-Bad.sq  List-Reverse.sq  Queue-Dequeue-Bad.sq  Queue-Dequeue.sq  Queue-Enqueue-Bad.sq  Queue-Enqueue.sq  oracle
test/resources/inference/: oracle
test/resources/synthesis/: IncList-MergeSort.sq  List-Append.sq  List-Common-Slow.sq  List-Common.sq  List-Compare.sq  List-Concat.sq  List-Cons2.sq  List-Double.sq  List-Insert.sq  List-Intersect.sq  (+5 more)
test/resyn_demo/: List-Insert.sq  List-Intersect.sq  List-LenCompare.sq  List-Range.sq
test/unit/: MultiArgMeasure.sq  oracle
(+87 files in other folders)
