name:                 resyn  
version:              1.1.0
synopsis:             Program Synthesis from Refinement Types
description:          Resyn is a simple functional programming language with refinement types.
                      In Resyn the programmer must provide the type signature for each top-level function,
                      but can leave parts (or all) of the implementation out for the system to fill in.
-- license:
-- license-file:         LICENSE
author:               Nadia Polikarpova
maintainer:           nadia.polikarpova@gmail.com
category:             Language
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

flag resyn 
  Description: Build the resyn executable
  Default:     True


Library 
  ghc-options:        -O2
  hs-source-dirs:     src
  default-language:   Haskell2010

  exposed-modules:    Synquid.Error
                    , Synquid.HtmlOutput
                    , Synquid.Logic
                    , Synquid.Parser
                    , Synquid.Pretty
                    , Synquid.Program
                    , Synquid.Resolver
                    , Synquid.Solver.CEGIS
                    , Synquid.Solver.HornClause
--                    , Synquid.Solver.LP
                    , Synquid.Solver.Monad
                    , Synquid.Solver.Resource
                    , Synquid.Solver.TypeConstraint
                    , Synquid.Solver.Types
                    , Synquid.Solver.Sygus
                    , Synquid.Synthesis.Explorer
                    , Synquid.Synthesis.Synthesizer
                    , Synquid.Synthesis.TypeChecker
                    , Synquid.Synthesis.Util
                    , Synquid.Tokens
                    , Synquid.Type
                    , Synquid.Util
                    , Synquid.Z3

  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts

  build-depends:      base >= 4.6
                    , containers >= 0.5
                    , ordered-containers >= 0.2
                    , mtl >= 2.2
                    , transformers >= 0.3
                    , transformers-compat >= 0.4
                    , lens >= 3.7
                    , ansi-wl-pprint >= 0.6
                    , ansi-terminal >= 0.6
                    , html >= 1
                    , bimap >= 0.2
                    , z3 > 4.0
                    , logict >= 0.5
                    , parsec >= 3.1
                    , indents >= 0.3
                    , cmdargs >= 0.10
                    , filepath
                    , time
                    , haskell-src-exts >= 1.17
                    , safe
                    , split
                    , tuple >= 0.3
                    , keys >= 3.11
                    , extra >= 1.4
                    , bifunctors >= 5.0
                    , conduit
                    , conduit-extra
                    , text
                    , pretty-simple
--                    , limp >= 0.3
--                    , limp-cbc >= 0.3
  

executable resyn 
  ghc-options:        -O2 -threaded
  main-is:            Synquid.hs

  build-depends:      resyn
                    , base
                    , containers >= 0.5 
                    , ordered-containers >= 0.2
                    , mtl >= 2.2
                    , time
                    , lens >= 3.7 
                    , filepath
                    , split
                    , cmdargs >= 0.10
                    , pretty-simple

  other-extensions:   TemplateHaskell
                    , Rank2Types
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , FlexibleContexts

  hs-source-dirs:     bin
  default-language:   Haskell2010
  If !flag(resyn)
    buildable: False

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test 
  main-is:          Test.hs
  build-depends:    base
                  , tasty
                  , tasty-hunit
                  , resyn
                  , containers >= 0.5
